modules/ldap-instance/sg.tf
// Allow SSH, LDAP and LDAPS request from internet.
resource "aws_security_group" "sg_for_ldap" {
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 389
    to_port     = 389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 636
    to_port     = 636
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "all"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id = var.vpc_id
  tags = merge({
    "Name" = "Security Group for LDAP Instance"
  },var.general_tags)
}

// Allow all
resource "aws_security_group" "sg_for_ldap_nlb" {
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "all"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "all"
    cidr_blocks = ["0.0.0.0/0"]
  }
  vpc_id = module.ldap_vpc.vpc_id
  tags = merge({
    "Name" = "Security Group for LDAP Network Load Balancer"
  },var.general_tags)
}
